flink/kustomize/flink-operator/base/flink-kubernetes-operator/templates/webhook.yaml
---
# Source: flink-kubernetes-operator/templates/webhook.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flink-operator-webhook-service
  namespace: flink
spec:
  ports:
  - port: 443
    targetPort: 9443
  selector:
    app.kubernetes.io/name: flink-kubernetes-operator
---
# Source: flink-kubernetes-operator/templates/webhook.yaml
################################################################################
#  Licensed to the Apache Software Foundation (ASF) under one
#  or more contributor license agreements.  See the NOTICE file
#  distributed with this work for additional information
#  regarding copyright ownership.  The ASF licenses this file
#  to you under the Apache License, Version 2.0 (the
#  "License"); you may not use this file except in compliance
#  with the License.  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
# limitations under the License.
################################################################################
---
# Source: flink-kubernetes-operator/templates/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: flink/flink-operator-serving-cert
  name: flink-operator-flink-webhook-configuration
webhooks:
  - name: mutationwebhook.flink.apache.org
    admissionReviewVersions: ["v1"]
    clientConfig:
      service:
        name: flink-operator-webhook-service
        namespace: flink
        path: /mutate
    failurePolicy: Fail
    rules:
      - apiGroups: ["flink.apache.org"]
        apiVersions: ["*"]
        scope: "Namespaced"
        operations:
          - CREATE
        resources:
          - flinksessionjobs
    sideEffects: None
---
# Source: flink-kubernetes-operator/templates/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: flink/flink-operator-serving-cert
  name: flink-operator-flink-webhook-configuration
webhooks:
- name: validationwebhook.flink.apache.org
  admissionReviewVersions: ["v1"]
  clientConfig:
    service:
      name: flink-operator-webhook-service
      namespace: flink
      path: /validate
  failurePolicy: Fail
  rules:
  - apiGroups: ["flink.apache.org"]
    apiVersions: ["*"]
    scope: "Namespaced"
    operations:
    - CREATE
    - UPDATE
    resources:
    - flinkdeployments
    - flinksessionjobs
  sideEffects: None
